<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Evopedia</string>
    <string name="search_hint">Search for Wikipedia articles</string>
    <string name="menu_search_hint">Search Titles</string>
    <string name="searchdialog_text_hint">Search titles</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_settings_condensed">Settings</string>
    <string name="menu_scan">Scan for archives</string>
    <string name="menu_scan_short">Scan for archives</string>
    <string name="menu_add_archive_manually">Add archive manually</string>
    <string name="menu_add_archive_manually_short">Add archive</string>
    <string name="menu_search">Search article</string>
    <string name="menu_search_short">Search</string>
    <string name="menu_send_feedback">Feedback to developers</string>
    <string name="menu_send_feedback_short">Feedback</string>
    <string name="menu_online_article">Article at wikipedia.org</string>
    <string name="menu_online_article_short">At wikipedia.org</string>
    <string name="menu_random_article">Random article</string>
    <string name="menu_random_article_short">Random article</string>
    <string name="menu_other_languages">In other languages</string>
    <string name="menu_other_languages_short">Other languages</string>
    <string name="choose_language">Choose the Language</string>
    <string name="external_storage_not_mounted_">External storage not mounted.</string>
    <string name="_1f_kb">, %.1f kB</string>
    <string name="could_not_find_any_archives_">Could not find any archives.</string>
    <plurals name="found_x_archives__">
        <item quantity="one">Found one archive: </item>
        <item quantity="other">Found %d archives: </item>
    </plurals>
    <string name="searching_for_archives_">Searching for archives...</string>
    <string name="pref_titles_infix_search">Search substrings in titles</string>
    <string name="pref_titles_infix_search_summ">Do not only search the beginning of titles
        but any word in the titles. Results are not sorted anymore.</string>
</resources>