<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_search_view"
        android:showAsAction="always|collapseActionView"
        android:actionLayout="@layout/search_bar"
        android:titleCondensed="@string/menu_search_short"
        android:title="@string/menu_search"
        android:icon="@android:drawable/ic_menu_search"/>
    <item android:id="@+id/menu_online_article"
        android:titleCondensed="@string/menu_online_article_short"
        android:title="@string/menu_online_article"
        android:visible="false"/>
    <item android:id="@+id/menu_other_languages"
        android:titleCondensed="@string/menu_other_languages_short"
        android:title="@string/menu_other_languages"
        android:visible="false"/>
    <item android:id="@+id/scan_for_archives"
        android:titleCondensed="@string/menu_scan_short"
        android:title="@string/menu_scan"
        android:showAsAction="never"/>
    <item android:id="@+id/menu_send_feedback"
        android:titleCondensed="@string/menu_send_feedback_short"
        android:title="@string/menu_send_feedback"
        android:showAsAction="never"/>
</menu>